Fix desktop menu visibility

--- a/components/Header/TopNav/TopNav.module.scss
+++ b/components/Header/TopNav/TopNav.module.scss
@@ -22,3 +22,9 @@ $-breakpoint: 768px;
     align-items: center;
   }
 }
+
+.mobile-hidden {
+  @include mobile {
+    display: none;
+  }
+}
